# FastAPI_MarketPlace

./: docker-compose.yml  logstash.conf  prometheus.yml
auth_service/: .env  Dockerfile  alembic.ini  delete.py  delete2.py  delete3.py  delete4.py  env.py  pyproject.toml  test.py
auth_service/alembic/: env.py
auth_service/alembic/versions/: f299c1ca50b2_initial.py
auth_service/app/: db.py  db_depends.py  init_roles.py  main.py  schemas.py  utils.py
auth_service/app/core/: metrics.py  redis.py
auth_service/app/crud/: permissions.py  roles.py  users.py
auth_service/app/dependencies/: auth.py  depend.py
auth_service/app/middleware/: jwt_middleware.py  logging.py  metrics.py
auth_service/app/migrations/: env.py
auth_service/app/migrations/versions/: 21bc8d00e0de_remove_default_from_permission_code.py  272bd40d5da1_initial.py  3ab0f43f3c86_initial.py  f299c1ca50b2_initial.py
auth_service/app/models/: __init__.py  permission.py  role.py  role_permission.py  user.py
auth_service/app/routers/: auth.py  permissions.py  roles.py  users.py
auth_service/app/schemas/: permission.py  role.py  user.py
catalog_service/: .env  alembic.ini  catalog_service.db  env.py  my_req.txt  pyproject.toml
celery_worker_service/: .env  .env.example  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  env.py  pyproject.toml
celery_worker_service/app/: celery_app.py  config.py  db.py  logging_conf.py  tasks.py
celery_worker_service/app/core/: metrics.py
celery_worker_service/app/models/: __init__.py  order.py
celery_worker_service/app/schemas/: __init__.py  order.py
celery_worker_service/app/services/: delivery.py  exchange.py  kafka_consumer.py  kafka_producer.py  orders_repo.py  rates.py  redis_cache.py  shipping.py
celery_worker_service/app/tasks/: orders.py  rates.py
orders_service/: .dockerignore  .env  .env.pgadmin  Dockerfile  README.md  alembic.ini  env.py  pyproject.toml
reviews_service/: .env  .gitignore  Dockerfile  env.py  pyproject.toml
reviews_service/app/: db.py  main.py
reviews_service/app/core/: config.py  kafka.py  logging.py  metrics.py
reviews_service/app/dependencies/: auth.py  depend.py
reviews_service/app/middleware/: logging.py  metrics.py
reviews_service/app/routers/: metrics.py  reviews.py
reviews_service/app/schemas/: review.py
reviews_service/app/service/: reviews.py
secrets/: auth_service_metrics.jwt  orders_metrics_jwt  (+1 more)
(+53 files in other folders)
