[tool.poetry]
name = "auth-service-poetry"
version = "0.1.0"
description = ""
authors = ["Ferrum <rezonbox@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
slugify = "^0.0.1"
sqlalchemy = "^2.0.42"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"