[tool.poetry]
name = "celery-worker-service"
version = "0.1.0"
description = "Julyberries Celery worker service"
authors = ["Ferrum <rezonbox@gmail.com>"]
license = "MIT"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
slugify = "^0.0.1"
sqlalchemy = "^2.0.42"
asyncpg = "^0.30"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
passlib = "==1.7.4"
bcrypt = "==4.0.1"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
redis = "^5.0.8"
aiokafka = "^0.12.0"
celery = "^5.4.0"
httpx = "^0.28.1"
requests = "^2.32.5"
loguru = "^0.7.3"
prometheus-client = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
